updating info about selected currency

--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>CryptoCheck</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -26,6 +20,32 @@
         <option value="XLM">Stellar</option>
         <option value="LTC">Litecoin</option>
       </select>
+      <div id="infoWrapper">
+        <div class="left-column">
+          <div class="crypto-info">
+            <img src="assets/CurrencyIcons/BTC.png" alt="" />
+            <h2>Bitcoin</h2>
+            <span>Rank: 1</span>
+          </div>
+          <ul class="price-list">
+            <li><span>UAH</span><span>245.001</span></li>
+            <li><span>UAH</span><span>245.001</span></li>
+            <li><span>UAH</span><span>245.001</span></li>
+          </ul>
+        </div>
+        <div class="right-column">
+          <ul class="price-caps">
+            <li class="highest"><span>Last 24h</span><span>-14003.43</span></li>
+            <li class="lowest"><span>Last 24h</span><span>-14003.43</span></li>
+          </ul>
+          <ul class="changes-list">
+            <li><span>Last 24h</span><span>-14003.43</span></li>
+            <li><span>Last 24h</span><span>-14003.43</span></li>
+            <li><span>Last 24h</span><span>-14003.43</span></li>
+            <li><span>Last 24h</span><span>-14003.43</span></li>
+          </ul>
+        </div>
+      </div>
     </section>
     <script src="script/script.js"></script>
   </body>
