Dynamic update of cryptocurrency info

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CryptoCheck</title>
   </head>
   <body>
+    <header>
+      <img src="assets/Logo.png" alt="" />
+      <h1>CryptoChecker</h1>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
